update about me

--- a/_posts/2024-01-06-ABC.md
+++ b/_posts/2024-01-06-ABC.md
@@ -7,6 +7,8 @@ title: How to use Tinker to generate inputs with force fields for Lammps simulat
 	* ~/projects/bin-macos/pdbxyz file.pdb 
 * change the numeric types in the xyz file (to those in PRM )
 * ~/projects/bin-macos/minimize P4_CH3.xyz, with the PRM file  --> .xyz_2 
+* use charges from ORCA to update the PRM file
+* redo minimize --> .xyz_3
 * ~/projects/bin-macos/analyze P4_CH3.xyz_2 Moreno.prm P > out 
 *  remove the useless header ### in out 
 * python tinkertoLAMMPS.py 
